fixed hello world

--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,7 @@
 <body>
 <script>
 //OOPS... theres an error here??
-console.log("HELLO WORLD IT'S NICE TO SEE YOU!"
+console.log("HELLO WORLD IT'S NICE TO SEE YOU!");
 </script>
 </body>
 </html>
